@@ -1,3 +1,10 @@
+September 11 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* The Price of cheap copies of Petrus lowered from 500 to 50. (They aren't THAT sacrate!)
+	* Bone changed from two handed weapon to one handed. I belive so, but might need debate.
+	* Skull added
+	
+
 September 10 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Corrected lots of warnings given by gcc compilation
